--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,8 +67,8 @@
     0deg,
     #f9a03fff,
     #f7d488ff,
-    #eaefb1ff,
-    #e9f7caff,
+    /* #eaefb1ff, */
+    /* #e9f7caff, */
     #ceb5a7ff
   );
 }
